Fix socials z-index

--- a/style.css
+++ b/style.css
@@ -66,6 +66,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 3rem;
+  z-index: 1;
 }
 #content .socials a {
   color: inherit;
